ProjectThumb vertical spacing fixed

--- a/client/src/components/ProjectThumb/ProjectThumb.css
+++ b/client/src/components/ProjectThumb/ProjectThumb.css
@@ -14,6 +14,10 @@
   cursor: pointer;
 }
 
+.ProjectThumb:last-of-type {
+  margin-bottom: 44px;
+}
+
 .ProjectTitle {
   position: absolute;
   top: 0;
