--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -19,7 +19,7 @@
 }
 
 .ProjectList {
-  margin-bottom: 44px;
+  margin: auto 0;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
